Agregadas las clases de NotifyBase y Client

--- a/WPFHelloWorld/MainWindow.xaml
+++ b/WPFHelloWorld/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="72">
+            Hello World!
+        </TextBlock>
     </Grid>
 </Window>
