--- a/WPFHelloWorld/MainWindow.xaml
+++ b/WPFHelloWorld/MainWindow.xaml
@@ -1,14 +1,41 @@
-﻿<Window x:Class="WPFHelloWorld.MainWindow"
+﻿<Window x:Class="WpfApplicationMVVM.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFHelloWorld"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="72">
-            Hello World!
-        </TextBlock>
+        xmlns:mv="clr-namespace:WPFHelloWorld.MV;assembly=WPFHelloWorld"
+        Title="MainWindow" Height="350" Width="525">
+
+    <Window.Resources>
+        <mv:ClientViewModel x:Key="clientViewModel"/>
+    </Window.Resources>
+
+    <Grid  DataContext="{StaticResource clientViewModel}">
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition MinHeight="200"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="100"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
+        <TextBlock x:Name="txbIdLabel" VerticalAlignment="Center" Margin="20 10 20 0" Grid.Column="0" Grid.Row="0" Text="Id" FontSize="15"/>
+        <TextBox x:Name="txtId" Text="{Binding Id}" Grid.Column="1" Grid.Row="0" Height="20" Margin="20 10 20 0" VerticalAlignment="Center" />
+
+        <TextBlock x:Name="txbNameLabel" VerticalAlignment="Center" Margin="20 10 0 0" Grid.Column="0" Grid.Row="1" Text="Name" FontSize="15"/>
+        <TextBox x:Name="txtName" Text="{Binding Name}" Grid.Column="1" Grid.Row="1" Height="20" Margin="20 10 20 0" VerticalAlignment="Center" />
+
+        <TextBlock x:Name="txbLastNameLabel" VerticalAlignment="Center" Margin="20 10 0 0" Grid.Column="0" Grid.Row="2" Text="LastName" FontSize="15"/>
+        <TextBox x:Name="txtLastName" Text="{Binding LastName}" Grid.Column="1" Grid.Row="2" Height="20" Margin="20 10 20 0" VerticalAlignment="Center" />
+
+        <StackPanel x:Name="stcpButtons" Orientation="Horizontal" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Margin="20 10 20 10 ">
+            <Button Content="Clear" Height="40" Width="60" Command="{Binding ClearCommand}"/>
+            <Button Content="Add" Height="40" Width="60" Margin="10 0 0 0" Command="{Binding AddClientCommand}"/>
+        </StackPanel>
+
+        <ListView x:Name="lvClients" SelectedIndex="{Binding SelectedIndexOfCollection, Mode=TwoWay}" MinHeight="50" ItemsSource="{StaticResource ResourceKey=clientViewModel}" DisplayMemberPath="DisplayName"  Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2" Margin="20 10 20 50"/>
     </Grid>
 </Window>
